--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
-  "name": "xmb",
-  "version": "1.0.0",
-  "description": "",
-  "main": "gulpfile.js",
+  "name": "bs-xmb",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "prestart": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./bin/www"
   },
-  "author": "zhaoxin",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4",
-    "gulp": "^3.9.1"
-  },
-  "devDependencies": {
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
-    "ejs": "^2.4.1",
+    "ejs": "~2.3.1",
     "express": "~4.12.2",
-    "gulp": "^3.9.1",
-    "gulp-webserver": "^0.9.1",
-    "jade": "~1.9.2",
-    "jquery": "^2.2.2",
-    "mongoose": "^4.4.10",
     "morgan": "~1.5.1",
-    "nodemon": "^1.9.1",
-    "run-sequence": "^1.1.5",
     "serve-favicon": "~2.2.0"
+  },
+  "devDependencies": {
+    "express-session": "^1.13.0",
+    "formidable": "^1.0.17",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-sass": "^2.2.0",
+    "mongoose": "^4.4.11",
+    "run-sequence": "^1.1.5"
   }
 }
